Fixed view on mobile browsers

--- a/themen/style.css
+++ b/themen/style.css
@@ -10,7 +10,7 @@ body {
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    font-size: 25px;
+    font-size: 1.5rem;
     overflow-x: hidden;
 }
 #topics {
